<resources>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="ratings">Ratings</string>
    <string name="search_response"> </string>
    <string name="movie_detail"> </string>
    <string name="star">Star</string>
    <string name="poster">Poster</string>
    <string name="home">Home</string>
    <string name="search_hint">Enter movie title</string>
    <string name="movie_details_minutes">min.</string>
    <string name="movie_details_budget_title">Budget:</string>
    <string name="movie_details_revenue_title">Revenue:</string>
    <string name="movie_details_release_date">Release date:</string>
    <string name="movie_details_error_message">An error occurred while loading movie information</string>
    <string name="search_response_error_message">An error occurred while loading search information</string>
    <string name="search_response_no_results">No search results</string>
    <string name="collection_row_error_message">An error occurred while loading search information</string>
    <string name="collection_row_no_results">No search results</string>
    <string name="category_title_now_playing">Now Playing</string>
    <string name="category_title_upcoming">Upcoming</string>
    <string name="category_title_top_movies">Top rated movies</string>
    <string name="category_title_top_actions">Top rated actions</string>
    <string name="category_title_top_comedies">Top rated comedies</string>
    <string name="category_title_top_animations">Top rated animations</string>
    <string name="content_description_remove_favorite_item">Remove item from favorites</string>
    <string name="added_favorite_item">Item added in favorites</string>
    <string name="error_add_favorite_item">Error adding to favorites</string>
    <string name="removed_favorite_item">Item removed from favorites</string>
    <string name="error_remove_favorite_item">Error removing from favorites</string>
    <string name="pref_adult_title">Show movies for adults</string>
    <string name="pref_adult_summ">Show movies which are tagged as \"Adult\".</string>
    <string name="menu_refresh">Refresh data</string>
</resources>