<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sr_ratings"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ratings_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Top movies row -->
                <TextView
                    android:id="@+id/tv_top_movies_row_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/category_title_start_margin"
                    android:text="@string/category_title_top_movies"
                    android:textSize="@dimen/category_title_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_top_movies_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false" />

                <ProgressBar
                    android:id="@+id/pb_top_movies_row"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_top_movies_row_no_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/collection_row_no_results"
                    android:visibility="gone" />

                <!-- Top actions row -->
                <TextView
                    android:id="@+id/tv_top_actions_row_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/category_title_start_margin"
                    android:text="@string/category_title_top_actions"
                    android:textSize="@dimen/category_title_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_top_actions_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false" />

                <ProgressBar
                    android:id="@+id/pb_top_actions_row"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_top_actions_row_no_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/collection_row_no_results"
                    android:visibility="gone" />

                <!-- Top comedies row -->
                <TextView
                    android:id="@+id/tv_top_comedies_row_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/category_title_start_margin"
                    android:text="@string/category_title_top_comedies"
                    android:textSize="@dimen/category_title_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_top_comedies_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false" />

                <ProgressBar
                    android:id="@+id/pb_top_comedies_row"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_top_comedies_row_no_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/collection_row_no_results"
                    android:visibility="gone" />

                <!-- Top animations row -->
                <TextView
                    android:id="@+id/tv_top_animations_row_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/category_title_start_margin"
                    android:text="@string/category_title_top_animations"
                    android:textSize="@dimen/category_title_text_size"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_top_animations_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false" />

                <ProgressBar
                    android:id="@+id/pb_top_animations_row"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_top_animations_row_no_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/collection_row_no_results"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>
