<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/movie_card_layout_margin"
    android:clickable="true"
    android:elevation="@dimen/movie_card_elevation"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    android:padding="@dimen/movie_card_padding"
    app:cardCornerRadius="@dimen/movie_card_corner_radius">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/movie_card_layout_margin">

        <ImageView
            android:id="@+id/iv_poster_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_card_layout_margin"
            android:ellipsize="end"
            android:fontFamily="@font/product_sans_bold"
            android:maxEms="15"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/iv_poster_search"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_release_date_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_card_layout_margin"
            android:layout_marginTop="@dimen/movie_card_layout_margin"
            app:layout_constraintStart_toEndOf="@id/iv_poster_search"
            app:layout_constraintTop_toBottomOf="@id/tv_title_search" />

        <TextView
            android:id="@+id/tv_original_title_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_card_layout_margin"
            android:layout_marginTop="@dimen/movie_card_layout_margin"
            android:ellipsize="end"
            android:maxEms="12"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/tv_release_date_search"
            app:layout_constraintTop_toBottomOf="@id/tv_title_search" />

        <TextView
            android:id="@+id/tv_genres_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_card_layout_margin"
            android:ellipsize="end"
            android:maxEms="14"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/iv_poster_search"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date_search" />

        <ImageView
            android:id="@+id/iv_vote_average_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_card_layout_margin"
            android:contentDescription="@string/star"
            app:layout_constraintStart_toEndOf="@id/iv_poster_search"
            app:layout_constraintTop_toBottomOf="@id/tv_genres_search"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/tv_vote_average_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movie_card_layout_margin"
            app:layout_constraintBottom_toBottomOf="@id/iv_vote_average_search"
            app:layout_constraintStart_toEndOf="@id/iv_vote_average_search"
            app:layout_constraintTop_toTopOf="@id/iv_vote_average_search" />

        <ImageView
            android:id="@+id/iv_remove_favorite"
            android:layout_width="@dimen/favorite_remove_icon_size"
            android:layout_height="@dimen/favorite_remove_icon_size"
            android:layout_marginEnd="@dimen/movie_card_layout_margin"
            android:contentDescription="@string/content_description_remove_favorite_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_favorite_fill" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>